调整目录结构

--- a/src/assets/less/global.less
+++ b/src/assets/less/global.less
@@ -95,3 +95,20 @@ ol {
     }
   }
 }
+
+.page-wrapper {
+  margin-right: -6px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+// 操作列里面的按钮
+.oprate-btn {
+  margin-right: 10px;
+}
+
+// 删除按钮
+.btn-del {
+  color: #f00;
+}
