--- a/src/assets/less/global.less
+++ b/src/assets/less/global.less
@@ -35,6 +35,7 @@ ol {
 .table-alert {
   margin-bottom: 16px;
 }
+
 // 数据列表 操作
 .table-operator {
   margin-bottom: 18px;
@@ -43,6 +44,7 @@ ol {
     margin-right: 8px;
   }
 }
+
 // 数据列表 搜索条件
 .table-page-search-wrapper {
   .ant-form-inline {
@@ -111,4 +113,8 @@ ol {
 // 删除按钮
 .btn-del {
   color: #f00;
+}
+
+.mr-10 {
+  margin-right: 10px;
 }
